Added intro to demand planner

--- a/1. Demand/Tables.ipynb
+++ b/1. Demand/Tables.ipynb
@@ -66,6 +66,10 @@
    "cell_type":"code",
    "source":[
     "# Product\n",
+    "\"\"\"\n",
+    "Contains product card with product release date, weight, max expiration time in days and multiplyer quantity \n",
+    "for business to business orders\n",
+    "\"\"\"\n",
     "\n",
     "cols = ['id', 'product_name', 'created_at', 'weight', 'expiration', 'number_of_items_btb']\n",
     "data = {'id': list(range(1, 25)),\n",
