--- a/1. Demand/Tables.ipynb
+++ b/1. Demand/Tables.ipynb
@@ -7,7 +7,7 @@
     "import datetime\n",
     "import pandas as pd"
    ],
-   "execution_count":32,
+   "execution_count":1,
    "outputs":[
     
    ],
@@ -453,6 +453,23 @@
    }
   },
   {
+   "cell_type":"markdown",
+   "source":[
+    "### Orders, btb"
+   ],
+   "attachments":{
+    
+   },
+   "metadata":{
+    "datalore":{
+     "node_id":"yoUEqKEAcY2bzVG3yn05Ac",
+     "type":"MD",
+     "hide_input_from_viewers":true,
+     "hide_output_from_viewers":true
+    }
+   }
+  },
+  {
    "cell_type":"code",
    "source":[
     "# product_name = ['camembert_150', 'camembert_250', 'camembert_formaggio', 'brie_150', 'brie_300', 'brie_with_mint',\n",
@@ -671,28 +688,18 @@
    }
   },
   {
-   "cell_type":"markdown",
-   "source":[
-    "### Orders, btb"
-   ],
-   "attachments":{
-    
-   },
-   "metadata":{
-    "datalore":{
-     "node_id":"yoUEqKEAcY2bzVG3yn05Ac",
-     "type":"MD",
-     "hide_input_from_viewers":true,
-     "hide_output_from_viewers":true
-    }
-   }
-  },
-  {
    "cell_type":"code",
    "source":[
     "\n",
     "# First let's generate item sales data using our rudimentary but simple randomizer tool\n",
     "# We need a way to link our individual item sales with orders and with warehouse stock\n",
+    "\"\"\"\n",
+    "Let's make a sales table now. It will include orders and dates\n",
+    "It does not imply that the Client received an order on that date - it is the date the order was created\n",
+    "The first df will comprise B2B orders from cafes\/restaurants (Horeca) and retailers\n",
+    "\n",
+    "These orders are huge in comparison to individual purchasers, yet they must meet the minimum amount per item\n",
+    "\"\"\"\n",
     "\n",
     "# prerequisites\n",
     "days = 700\n",
@@ -923,6 +930,8 @@
   {
    "cell_type":"code",
    "source":[
+    "# Beautify oue dataset\n",
+    "\n",
     "df_btb_final = pd.concat(create_dataframe_list(start=1, finish=18))\n",
     "\n",
     "# sort out of range dates\n",
@@ -1072,6 +1081,293 @@
    "metadata":{
     "datalore":{
      "node_id":"3czj5vbGfXVZ5z29v3ytAL",
+     "type":"CODE",
+     "hide_input_from_viewers":true,
+     "hide_output_from_viewers":true
+    }
+   }
+  },
+  {
+   "cell_type":"code",
+   "source":[
+    "\n",
+    "# Then sales for individual buyers who buy directly from our web\/app\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "# prerequisites\n",
+    "days = 700\n",
+    "today = datetime.date.today()\n",
+    "columns = ['date', 'order_id', 'warehouse', 'sku_name', 'amount']\n",
+    "\n",
+    "# camembert_150\n",
+    "df_0 = create_dataframe(columns=columns)\n",
+    "# Fill the dataset with values using the randomizer function\n",
+    "df_0['date'] = randomizer('datetime64[ns]', days, '2021-08-08', max_date_format)\n",
+    "# Define how many rows should be per 1 order\n",
+    "max_group_size = random.randint(1, 5)  # each item in order, rows x - y\n",
+    "df_0['order_id'] = randomizer('order_id', days, max_group_size)\n",
+    "df_0['warehouse'] = 1\n",
+    "df_0['sku_name'] = 'camembert_150'\n",
+    "df_0['amount'] = randomizer('int64', days, 0, 6, 1)\n",
+    "\n",
+    "# camembert_250\n",
+    "df_1 = create_dataframe(columns=columns)\n",
+    "# Fill the dataset with values using the randomizer function\n",
+    "df_1['date'] = randomizer('datetime64[ns]', days, '2021-08-08', max_date_format)\n",
+    "# Define how many rows should be per 1 order\n",
+    "max_group_size = random.randint(1, 5)  # each item in order, rows x - y\n",
+    "df_1['order_id'] = randomizer('order_id', days, max_group_size)\n",
+    "df_1['warehouse'] = 1\n",
+    "df_1['sku_name'] = 'camembert_250'\n",
+    "df_1['amount'] = randomizer('int64', days, 0, 4, 1)\n",
+    "\n",
+    "# camembert_formaggio\n",
+    "df_2 = create_dataframe(columns=columns)\n",
+    "# Fill the dataset with values using the randomizer function\n",
+    "df_2['date'] = randomizer('datetime64[ns]', days, '2022-05-01', max_date_format)\n",
+    "# Define how many rows should be per 1 order\n",
+    "max_group_size = random.randint(1, 4)  # each item in order, rows x - y\n",
+    "df_2['order_id'] = randomizer('order_id', days, max_group_size)\n",
+    "df_2['warehouse'] = 1\n",
+    "df_2['sku_name'] = 'camembert_formaggio'\n",
+    "df_2['amount'] = randomizer('int64', days, 1, 3, 1)\n",
+    "\n",
+    "# brie_300\n",
+    "df_3 = create_dataframe(columns=columns)\n",
+    "# Fill the dataset with values using the randomizer function\n",
+    "df_3['date'] = randomizer('datetime64[ns]', days, '2021-09-01', max_date_format)\n",
+    "# Define how many rows should be per 1 order\n",
+    "max_group_size = random.randint(1, 4)  # each item in order, rows x - y\n",
+    "df_3['order_id'] = randomizer('order_id', days, max_group_size)\n",
+    "df_3['warehouse'] = 1\n",
+    "df_3['sku_name'] = 'brie_300'\n",
+    "df_3['amount'] = randomizer('int64', days, 6, 72, 6)\n",
+    "\n",
+    "# brie_with_mint\n",
+    "df_4 = create_dataframe(columns=columns)\n",
+    "# Fill the dataset with values using the randomizer function\n",
+    "df_4['date'] = randomizer('datetime64[ns]', days, '2021-08-08', max_date_format)\n",
+    "# Define how many rows should be per 1 order\n",
+    "max_group_size = random.randint(1, 4)  # each item in order, rows x - y\n",
+    "df_4['order_id'] = randomizer('order_id', days, max_group_size)\n",
+    "df_4['warehouse'] = 1\n",
+    "df_4['sku_name'] = 'brie_with_mint'\n",
+    "df_4['amount'] = randomizer('int64', days, 0, 8, 1)\n",
+    "\n",
+    "# roquefort\n",
+    "df_5 = create_dataframe(columns=columns)\n",
+    "# Fill the dataset with values using the randomizer function\n",
+    "df_5['date'] = randomizer('datetime64[ns]', days, '2021-08-08', max_date_format)\n",
+    "# Define how many rows should be per 1 order\n",
+    "max_group_size = random.randint(1, 4)  # each item in order, rows x - y\n",
+    "df_5['order_id'] = randomizer('order_id', days, max_group_size)\n",
+    "df_5['warehouse'] = 1\n",
+    "df_5['sku_name'] = 'roquefort'\n",
+    "df_5['amount'] = randomizer('int64', days, 0, 1, 1)\n",
+    "\n",
+    "# blue_cheese\n",
+    "df_6 = create_dataframe(columns=columns)\n",
+    "# Fill the dataset with values using the randomizer function\n",
+    "df_6['date'] = randomizer('datetime64[ns]', days, '2021-11-01', max_date_format)\n",
+    "# Define how many rows should be per 1 order\n",
+    "max_group_size = random.randint(1, 4)  # each item in order, rows x - y\n",
+    "df_6['order_id'] = randomizer('order_id', days, max_group_size)\n",
+    "df_6['warehouse'] = 1\n",
+    "df_6['sku_name'] = 'blue_cheese'\n",
+    "df_6['amount'] = randomizer('int64', days, 0, 7, 1)\n",
+    "\n",
+    "# red_cheese\n",
+    "df_7 = create_dataframe(columns=columns)\n",
+    "# Fill the dataset with values using the randomizer function\n",
+    "df_7['date'] = randomizer('datetime64[ns]', days, '2022-03-18', max_date_format)\n",
+    "# Define how many rows should be per 1 order\n",
+    "df_7['order_id'] = randomizer('order_id', days, max_group_size)\n",
+    "df_7['warehouse'] = 1\n",
+    "df_7['sku_name'] = 'red_cheese'\n",
+    "df_7['amount'] = randomizer('int64', days, 0, 7, 1)\n",
+    "\n",
+    "# cheddar_1_kg\n",
+    "df_8 = create_dataframe(columns=columns)\n",
+    "# Fill the dataset with values using the randomizer function\n",
+    "df_8['date'] = randomizer('datetime64[ns]', days, '2021-08-08', max_date_format)\n",
+    "# Define how many rows should be per 1 order\n",
+    "df_8['order_id'] = randomizer('order_id', days, max_group_size)\n",
+    "df_8['warehouse'] = 1\n",
+    "df_8['sku_name'] = 'cheddar_1_kg'\n",
+    "df_8['amount'] = randomizer('int64', days, 0, 1, 1)\n",
+    "\n",
+    "# maasdam_1_kg\n",
+    "df_9 = create_dataframe(columns=columns)\n",
+    "# Fill the dataset with values using the randomizer function\n",
+    "df_9['date'] = randomizer('datetime64[ns]', days, '2021-08-08', max_date_format)\n",
+    "# Define how many rows should be per 1 order\n",
+    "df_9['order_id'] = randomizer('order_id', days, max_group_size)\n",
+    "df_9['warehouse'] = 1\n",
+    "df_9['sku_name'] = 'maasdam_1_kg'\n",
+    "df_9['amount'] = randomizer('int64', days, 0, 1, 1)\n",
+    "\n",
+    "# gouda_1_kg\n",
+    "df_10 = create_dataframe(columns=columns)\n",
+    "# Fill the dataset with values using the randomizer function\n",
+    "df_10['date'] = randomizer('datetime64[ns]', days, '2021-08-08', max_date_format)\n",
+    "# Define how many rows should be per 1 order\n",
+    "df_10['order_id'] = randomizer('order_id', days, max_group_size)\n",
+    "df_10['warehouse'] = 1\n",
+    "df_10['sku_name'] = 'gouda_1_kg'\n",
+    "df_10['amount'] = randomizer('int64', days, 0, 1, 1)\n",
+    "\n",
+    "# gouda_1_kg\n",
+    "df_10 = create_dataframe(columns=columns)\n",
+    "# Fill the dataset with values using the randomizer function\n",
+    "df_10['date'] = randomizer('datetime64[ns]', days, '2021-08-08', max_date_format)\n",
+    "# Define how many rows should be per 1 order\n",
+    "df_10['order_id'] = randomizer('order_id', days, max_group_size)\n",
+    "df_10['warehouse'] = 1\n",
+    "df_10['sku_name'] = 'gouda_1_kg'\n",
+    "df_10['amount'] = randomizer('int64', days, 0, 1, 1)\n",
+    "\n",
+    "# gouda_1_kg\n",
+    "df_11 = create_dataframe(columns=columns)\n",
+    "# Fill the dataset with values using the randomizer function\n",
+    "df_11['date'] = randomizer('datetime64[ns]', days, '2021-08-08', max_date_format)\n",
+    "# Define how many rows should be per 1 order\n",
+    "df_11['order_id'] = randomizer('order_id', days, max_group_size)\n",
+    "df_11['warehouse'] = 1\n",
+    "df_11['sku_name'] = 'gouda_1_kg'\n",
+    "df_11['amount'] = randomizer('int64', days, 1, 1, 1)\n",
+    "\n",
+    "# parmesan_1_kg\n",
+    "df_12 = create_dataframe(columns=columns)\n",
+    "# Fill the dataset with values using the randomizer function\n",
+    "df_12['date'] = randomizer('datetime64[ns]', days, '2021-08-08', max_date_format)\n",
+    "# Define how many rows should be per 1 order\n",
+    "df_12['order_id'] = randomizer('order_id', days, max_group_size)\n",
+    "df_12['warehouse'] = 1\n",
+    "df_12['sku_name'] = 'parmesan_1_kg'\n",
+    "df_12['amount'] = randomizer('int64', days, 0, 1, 1)\n",
+    "\n",
+    "# ricotta\n",
+    "df_13 = create_dataframe(columns=columns)\n",
+    "# Fill the dataset with values using the randomizer function\n",
+    "df_13['date'] = randomizer('datetime64[ns]', days, '2022-10-08', max_date_format)\n",
+    "# Define how many rows should be per 1 order\n",
+    "df_13['order_id'] = randomizer('order_id', days, max_group_size)\n",
+    "df_13['warehouse'] = 1\n",
+    "df_13['sku_name'] = 'ricotta'\n",
+    "df_13['amount'] = randomizer('int64', days, 3, 12, 1)\n",
+    "\n",
+    "# young_cheese_800_g\n",
+    "df_14 = create_dataframe(columns=columns)\n",
+    "# Fill the dataset with values using the randomizer function\n",
+    "df_14['date'] = randomizer('datetime64[ns]', days, '2023-02-01', max_date_format)\n",
+    "# Define how many rows should be per 1 order\n",
+    "df_14['order_id'] = randomizer('order_id', days, max_group_size)\n",
+    "df_14['warehouse'] = 1\n",
+    "df_14['sku_name'] = 'young_cheese_800_g'\n",
+    "df_14['amount'] = randomizer('int64', days, 1, 7, 1)\n",
+    "\n",
+    "# feta\n",
+    "df_15 = create_dataframe(columns=columns)\n",
+    "# Fill the dataset with values using the randomizer function\n",
+    "df_15['date'] = randomizer('datetime64[ns]', days, '2021-08-08', max_date_format)\n",
+    "# Define how many rows should be per 1 order\n",
+    "df_15['order_id'] = randomizer('order_id', days, max_group_size)\n",
+    "df_15['warehouse'] = 1\n",
+    "df_15['sku_name'] = 'feta'\n",
+    "df_15['amount'] = randomizer('int64', days, 3, 12, 1)\n",
+    "\n",
+    "# set_1\n",
+    "df_16 = create_dataframe(columns=columns)\n",
+    "# Fill the dataset with values using the randomizer function\n",
+    "df_16['date'] = randomizer('datetime64[ns]', days, '2022-11-01', max_date_format)\n",
+    "# Define how many rows should be per 1 order\n",
+    "df_16['order_id'] = randomizer('order_id', days, max_group_size)\n",
+    "df_16['warehouse'] = 1\n",
+    "df_16['sku_name'] = 'set_1'\n",
+    "df_16['amount'] = randomizer('int64', days, 0, 1, 1)\n",
+    "\n",
+    "# set_2\n",
+    "df_17 = create_dataframe(columns=columns)\n",
+    "# Fill the dataset with values using the randomizer function\n",
+    "df_17['date'] = randomizer('datetime64[ns]', days, '2023-01-15', max_date_format)\n",
+    "# Define how many rows should be per 1 order\n",
+    "df_17['order_id'] = randomizer('order_id', days, max_group_size)\n",
+    "df_17['warehouse'] = 1\n",
+    "df_17['sku_name'] = 'set_2'\n",
+    "df_17['amount'] = randomizer('int64', days, 0, 1, 1)\n",
+    "\n",
+    "# cottage_cheese_1_kg\n",
+    "df_17 = create_dataframe(columns=columns)\n",
+    "# Fill the dataset with values using the randomizer function\n",
+    "df_17['date'] = randomizer('datetime64[ns]', days, '2023-02-01', max_date_format)\n",
+    "# Define how many rows should be per 1 order\n",
+    "df_17['order_id'] = randomizer('order_id', days, max_group_size)\n",
+    "df_17['warehouse'] = 1\n",
+    "df_17['sku_name'] = 'cottage_cheese_1_kg'\n",
+    "df_17['amount'] = randomizer('int64', days, 2, 15, 1)\n",
+    "\n",
+    "# brie_150\n",
+    "df_18 = create_dataframe(columns=columns)\n",
+    "# Fill the dataset with values using the randomizer function\n",
+    "df_18['date'] = randomizer('datetime64[ns]', days, '2021-08-08', max_date_format)\n",
+    "# Define how many rows should be per 1 order\n",
+    "df_18['order_id'] = randomizer('order_id', days, max_group_size)\n",
+    "df_18['warehouse'] = 1\n",
+    "df_18['sku_name'] = 'brie_150'\n",
+    "df_18['amount'] = randomizer('int64', days, 1, 14, 1)\n",
+    "\n",
+    "# cheddar_200_g\n",
+    "df_19 = create_dataframe(columns=columns)\n",
+    "# Fill the dataset with values using the randomizer function\n",
+    "df_19['date'] = randomizer('datetime64[ns]', days, '2021-09-15', max_date_format)\n",
+    "# Define how many rows should be per 1 order\n",
+    "df_19['order_id'] = randomizer('order_id', days, max_group_size)\n",
+    "df_19['warehouse'] = 1\n",
+    "df_19['sku_name'] = 'cheddar_200_g'\n",
+    "df_19['amount'] = randomizer('int64', days, 4, 17, 1)\n",
+    "\n",
+    "# maasdam_200_g\n",
+    "df_20 = create_dataframe(columns=columns)\n",
+    "# Fill the dataset with values using the randomizer function\n",
+    "df_20['date'] = randomizer('datetime64[ns]', days, '2021-08-08', max_date_format)\n",
+    "# Define how many rows should be per 1 order\n",
+    "df_20['order_id'] = randomizer('order_id', days, max_group_size)\n",
+    "df_20['warehouse'] = 1\n",
+    "df_20['sku_name'] = 'maasdam_200_g'\n",
+    "df_20['amount'] = randomizer('int64', days, 4, 19, 1)\n",
+    "\n",
+    "# parmesan_150_g\n",
+    "df_21 = create_dataframe(columns=columns)\n",
+    "# Fill the dataset with values using the randomizer function\n",
+    "df_21['date'] = randomizer('datetime64[ns]', days, '2021-09-15', max_date_format)\n",
+    "# Define how many rows should be per 1 order\n",
+    "df_21['order_id'] = randomizer('order_id', days, max_group_size)\n",
+    "df_21['warehouse'] = 1\n",
+    "df_21['sku_name'] = 'parmesan_150_g'\n",
+    "df_21['amount'] = randomizer('int64', days, 5, 18, 1)\n",
+    "\n",
+    "def create_dataframe_list(start=1, finish=2):\n",
+    "    dataframe_list = []\n",
+    "    \n",
+    "    for i in range(start, finish):\n",
+    "        df_name = f\"df_{i}\"\n",
+    "        if df_name in globals():\n",
+    "            dataframe_list.append(eval(df_name))\n",
+    "        else:\n",
+    "            print(f\"Warning: {df_name} does not exist.\")\n",
+    "    \n",
+    "    return dataframe_list"
+   ],
+   "execution_count":null,
+   "outputs":[
+    
+   ],
+   "metadata":{
+    "datalore":{
+     "node_id":"cUcdRCICdN0FBLA6HLiTyb",
      "type":"CODE",
      "hide_input_from_viewers":true,
      "hide_output_from_viewers":true
